--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
 
 # 依赖及打包产物
 node_modules
@@ -14,6 +17,7 @@ dist-ssr
 *.local
 *.zip
 *.rar
+.docs/*
 
 # Editor directories and files
 .vscode/*
